infra/configs/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /grafana
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: monitoring
  name: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      middlewares:
        - name: grafana-stripprefix
      services:
        - name: monitoring-prometheus-grafana
          port: 80
